--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.thibma.pokedex">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/app_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pokedex">
-        <activity android:name=".activities.SplashScreenActivity"></activity>
+        android:theme="@style/Theme.Pokedex"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".activities.PokemonDetailActivity"></activity>
+        <activity android:name=".activities.SplashScreenActivity" />
         <activity android:name=".activities.PokedexActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
