--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,10 +1,10 @@
 {
   "name": "Pokédex",
-  "schemaPath": "app/src/main/graphql/schema.json",
+  "schemaPath": "app/src/main/graphql/fr/thibma/pokedex/graphql/schema.graphqls",
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "http://localhost:4000/graphql",
+        "url": "http://mocprojects.spell.ovh:4000/graphql",
         "headers": {
           "user-agent": "JS GraphQL"
         },
